--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "php": ">=5.5.0",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "illuminate/console": "~5.1|~6.0|~7.0|~8.0|~9.0|~10.0",
-        "illuminate/support": "~5.1|~6.0|~7.0|~8.0|~9.0|~10.0"
+        "illuminate/console": "^10.0|^11.0|^12.0",
+        "illuminate/support": "^10.0|^11.0|^12.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.7"
